--- a/domestic.html
+++ b/domestic.html
@@ -5,216 +5,248 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-	<head>
-		<title>Film - Stats : Domestic Collection</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main1.css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	</head>
-	<body>
 
-		<!-- Header -->
-			<header id="header">
-				<h1><a href="index.html">Vivek Choubey <span>Film - Stats</span></a></h1>
-				<a href="#menu">Menu</a>
-			</header>
+<head>
+	<title>Film - Stats : Domestic Collection</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="assets/css/main1.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 
-		<!-- Nav -->
-			<nav id="menu">
-				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About Us </a></li>
-					<li><a href="login.html">Login/Register</a></li>
-				</ul>
-			</nav>
+<body>
 
-			<!-- Banner -->
-			<!--
+	<!-- Header -->
+	<header id="header">
+		<h1 class="name"><a href="index.html">Vivek Choubey <span>Film - Stats</span></a></h1>
+		<a href="#menu">Menu</a>
+	</header>
+
+	<!-- Nav -->
+	<nav id="menu">
+		<ul class="links">
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About Us </a></li>
+			<li><a href="login.html">Login/Register</a></li>
+		</ul>
+	</nav>
+
+	<!-- Banner -->
+	<!--
 				To use a video as your background, set data-video to the name of your video without
 				its extension (eg. images/banner). Your video must be available in both .mp4 and .webm
 				formats to work correctly.
 			-->
-            <div id="main">
-			<!-- Two -->
-				<section class="wrapper style2">
-					<div class="inner">
-						<header>
-							<a href="domestic.html"><h2>Domestic Box Office Collection: </h2></a>
-                            <hr>
-						</header>
-                        <ul>
-						<li><a href="Domestic Box Office Collection/dom_open_day.html"><h4>Highest Opening Day Nett Collections</h4></a></li>
-						<li><a href="Domestic Box Office Collection/dom_open_weekend.html"><h4>Highest Opening Weekend Nett Collections</h4></a></li>
-						<li><a href="Domestic Box Office Collection/dom_open_week.html"><h4>Highest Opening Week Nett Collections</h4></a></li>
-						<li><a href="Domestic Box Office Collection/dom_lifetime_nett.html"><h4>Highest Lifetime Nett Collections</h4></a></li>
-						<li><a href="Domestic Box Office Collection/dom_lifetime_gross.html"><h4>Highest Lifetime Gross Collections</h4></a></li>
-						<li><a href="#"><h4 id="myBtn">Highest Circuit-Wise Nett Collections</h4></a></li>
-						<div id="myModal" class="modal">
+	<div id="main">
+		<!-- Two -->
+		<section class="wrapper style2">
+			<div class="inner">
+				<header>
+					<a href="domestic.html">
+						<h2>Domestic Box Office Collection: </h2>
+					</a>
+					<hr>
+				</header>
+				<ul>
+					<li><a href="Domestic Box Office Collection/dom_open_day.html">
+							<h4>Highest Opening Day Nett Collections</h4>
+						</a></li>
+					<li><a href="Domestic Box Office Collection/dom_open_weekend.html">
+							<h4>Highest Opening Weekend Nett Collections</h4>
+						</a></li>
+					<li><a href="Domestic Box Office Collection/dom_open_week.html">
+							<h4>Highest Opening Week Nett Collections</h4>
+						</a></li>
+					<li><a href="Domestic Box Office Collection/dom_lifetime_nett.html">
+							<h4>Highest Lifetime Nett Collections</h4>
+						</a></li>
+					<li><a href="Domestic Box Office Collection/dom_lifetime_gross.html">
+							<h4>Highest Lifetime Gross Collections</h4>
+						</a></li>
+					<li><a href="#">
+							<h4 id="myBtn1">Highest Week-Wise Nett Collections</h4>
+						</a></li>
+					<div id="myModal1" class="modal">
 						<!-- Modal content -->
-							<div class="modal-content">
-								<span class="close">&times;</span> 
-								<p class="mc">Highest Circuit-Wise Nett Collections:</p><hr class="h">
-								<div class="row sx">
-									<div class="col">
-										&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-									</div>
-									<div class="col-6">
-										<p class="sz"><a href="Domestic Box Office Collection/dom_circuit.html">•Mumbai/Gujrat</a><br><a href="Domestic Box Office Collection/dom_circuit.html">•East Punjab</a><br><a href="Domestic Box Office Collection/dom_circuit.html">•CP Bers</a><br><a href="Domestic Box Office Collection/dom_circuit.html">•Nizam/Andhra</a><br><a href="Domestic Box Office Collection/dom_circuit.html">•Tamilnadu/Kerela</a><br><a href="Domestic Box Office Collection/dom_circuit.html">•West Bengal</a><br><a href="Domestic Box Office Collection/dom_circuit.html">•Orrisa</a></p>
-									</div>
-									<div class="col">
-										&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-									</div>
-									<div class="col-6">
-										<p class="sz"><a href="Domestic Box Office Collection/dom_circuit.html">•Delhi/UP</a> <br><a href="Domestic Box Office Collection/dom_circuit.html">•Rajasthan</a> <br><a href="Domestic Box Office Collection/dom_circuit.html">•Central India </a><br><a href="Domestic Box Office Collection/dom_circuit.html">•Mysore</a><br><a href="Domestic Box Office Collection/dom_circuit.html">•Bihar</a><br><a href="Domestic Box Office Collection/dom_circuit.html">•Assam</a></p>
-									</div>
+						<div class="modal-content">
+							<span class="close1">&times;</span>
+							<h3>Highest Week-Wise Nett Collections:</h3>
+							<hr class="h">
+							<div class="row sx">
+								<div class="col">
+									&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+								</div>
+								<div class="col-6">
+									<p class="sz"><a href="Domestic Box Office Collection/dom_week.html">•Opening
+											Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•Second
+											Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•Third
+											Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•Fourth
+											Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•Fifth
+											Week</a>
+									<p>
+								</div>
+								<div class="col">
+									&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+								</div>
+								<div class="col-6">
+									<p class="sz"><a href="Domestic Box Office Collection/dom_week.html">•Sixth
+											Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•Seventh
+											Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•Eighth
+											Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•There
+											After</a></p>
 								</div>
 							</div>
-						</div>
-						<li><a href="#"><h4 id="myBtn1">Highest Week-Wise Nett Collections</h4></a></li>
-						<div id="myModal1" class="modal">
-						<!-- Modal content -->
-							<div class="modal-content">
-								<span class="close1">&times;</span> 
-								<p class="mc">Highest Week-Wise Nett Collections:</p><hr class="h">
-								<div class="row sx">
-									<div class="col">
-										&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-									</div>
-									<div class="col-6">
-										<p class="sz"><a href="Domestic Box Office Collection/dom_week.html">•Opening Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•Second Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•Third Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•Fourth Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•Fifth Week</a><p>
-									</div>
-									<div class="col">
-										&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-									</div>
-									<div class="col-6">
-										<p class="sz"><a href="Domestic Box Office Collection/dom_week.html">•Sixth Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•Seventh Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•Eighth Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•There After</a></p>
-									</div>
-								</div>
-							</div>
-						</div>
-						</ul>
-                    </div>
-                </section>
-            </div>
-
-    		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<div class="flex flex-3">
-						<div class="col">
-							<h3>Box Office </h3>
-							<ul class="alt">
-								<li><a href="#">Magazine</a></li>
-								<li><a href="#">Numbers</a></li>
-								<li><a href="#">Movie Calender</a></li>
-								<li><a href="#">Subscribe</a></li>
-							</ul>
-						</div>
-						<div class="col">
-							<h3>Topics</h3>
-							<ul class="alt">
-								<li><a href="#">From the Magazine</a></li>
-								<li><a href="#">Tracking & Forecasts</a></li>
-								<li><a href="#">Numbers</a></li>
-							</ul>
-						</div>
-						<div class="col">
-							<h3>Company</h3>
-							<ul class="alt">
-								<li><a href="#">Terms & Conditions</a></li>
-								<li><a href="#">Privacy Policy</a></li>
-							</ul>
-						</div>
+						</div><br><br>
 					</div>
-				</div>
-				<div class="copyright">
-					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
+					<li><a href="#">
+							<h4 id="myBtn">Highest Circuit-Wise Nett Collections</h4>
+						</a></li>
+					<div id="myModal" class="modal">
+						<!-- Modal content -->
+						<div class="modal-content">
+							<span class="close">&times;</span>
+							<h3>Highest Circuit-Wise Nett Collections:</h3>
+							<hr class="h">
+							<div class="row sx">
+								<div class="col">
+									&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+								</div>
+								<div class="col-6">
+									<p class="sz"><a
+											href="Domestic Box Office Collection/dom_circuit.html">•Mumbai/Gujrat</a><br><a
+											href="Domestic Box Office Collection/dom_circuit.html">•Delhi/UP
+										</a><br><a href="Domestic Box Office Collection/dom_circuit.html">•East
+										Punjab</a><br><a
+											href="Domestic Box Office Collection/dom_circuit.html">•Rajasthan</a><br><a
+											href="Domestic Box Office Collection/dom_circuit.html">•CP Bers</a><br><a
+											href="Domestic Box Office Collection/dom_circuit.html">•Central
+											India</a><br><a
+											href="Domestic Box Office Collection/dom_circuit.html">•Nizam/Andhra</a></p>
+								</div>
+								<div class="col">
+									&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+								</div>
+								<div class="col-6">
+									<p class="sz"><a
+											href="Domestic Box Office Collection/dom_circuit.html">•Mysore</a> <br><a
+											href="Domestic Box Office Collection/dom_circuit.html">•Tamilnadu/Kerela</a> <br><a
+											href="Domestic Box Office Collection/dom_circuit.html">•Bihar
+										</a><br><a
+											href="Domestic Box Office Collection/dom_circuit.html">•West Bengal</a><br><a
+											href="Domestic Box Office Collection/dom_circuit.html">•Assam</a><br><a
+											href="Domestic Box Office Collection/dom_circuit.html">•Orrisa</a></p>
+								</div>
+							</div>
+						</div><br><br>
+					</div>
+				</ul>
+			</div>
+		</section>
+	</div>
+
+	<!-- Footer -->
+	<footer id="footer">
+		<div class="inner">
+			<div class="flex flex-3">
+				<div class="col">
+					<h3>Box Office </h3>
+					<ul class="alt">
+						<li><a href="#">Magazine</a></li>
+						<li><a href="#">Numbers</a></li>
+						<li><a href="#">Movie Calender</a></li>
+						<li><a href="#">Subscribe</a></li>
 					</ul>
-					&copy; Selfmade Design: <a href="#">On demand </a>. Images: <a href="https://unsplash.com">Coverr</a>. Video: <a href="https://coverr.co">Coverr</a>.
 				</div>
-			</footer>
+				<div class="col">
+					<h3>Topics</h3>
+					<ul class="alt">
+						<li><a href="#">From the Magazine</a></li>
+						<li><a href="#">Tracking & Forecasts</a></li>
+						<li><a href="#">Numbers</a></li>
+					</ul>
+				</div>
+				<div class="col">
+					<h3>Company</h3>
+					<ul class="alt">
+						<li><a href="#">Terms & Conditions</a></li>
+						<li><a href="#">Privacy Policy</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="copyright">
+			<ul class="icons">
+				<li><a href="http://twitter.com/VivekChoubeyyy" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="https://www.facebook.com/iVivekChoubey" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+				<li><a href="http://instagram.com/vivekchoubeyy" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+			</ul>
+			&copy; Design By: <a href="#">Tech_Marketz</a>   
+		</div>
+	</footer>
 
-		<!-- Scripts -->
-			<script>
-				// Get the modal
-				var modal1 = document.getElementById("myModal");
+	<!-- Scripts -->
+	<script>
+		// Get the modal
+		var modal1 = document.getElementById("myModal");
 
-				// Get the button that opens the modal
-				var btn1 = document.getElementById("myBtn");
+		// Get the button that opens the modal
+		var btn1 = document.getElementById("myBtn");
 
-				// Get the <span> element that closes the modal
-				var span1 = document.getElementsByClassName("close")[0];
+		// Get the <span> element that closes the modal
+		var span1 = document.getElementsByClassName("close")[0];
 
-				// When the user clicks the button, open the modal 
-				btn1.onclick = function() {
-				modal1.style.display = "block";
-				}
+		// When the user clicks the button, open the modal 
+		btn1.onclick = function () {
+			modal1.style.display = "block";
+		}
 
-				// When the user clicks on <span> (x), close the modal
-				span1.onclick = function() {
+		// When the user clicks on <span> (x), close the modal
+		span1.onclick = function () {
+			modal1.style.display = "none";
+		}
+
+		// When the user clicks anywhere outside of the modal, close it
+		window.onclick = function (event) {
+			if (event.target == modal1) {
 				modal1.style.display = "none";
-				}
+			}
+		}
+	</script>
+	<script>
+		// Get the modal
+		var modal = document.getElementById("myModal1");
 
-				// When the user clicks anywhere outside of the modal, close it
-				window.onclick = function(event) {
-				if (event.target == modal1) {
-					modal1.style.display = "none";
-				}
-				}
-			</script>
-			<script>
-				// Get the modal
-				var modal = document.getElementById("myModal1");
+		// Get the button that opens the modal
+		var btn = document.getElementById("myBtn1");
 
-				// Get the button that opens the modal
-				var btn = document.getElementById("myBtn1");
+		// Get the <span> element that closes the modal
+		var span = document.getElementsByClassName("close1")[0];
 
-				// Get the <span> element that closes the modal
-				var span = document.getElementsByClassName("close1")[0];
+		// When the user clicks the button, open the modal 
+		btn.onclick = function () {
+			modal.style.display = "block";
+		}
 
-				// When the user clicks the button, open the modal 
-				btn.onclick = function() {
-				modal.style.display = "block";
-				}
+		// When the user clicks on <span> (x), close the modal
+		span.onclick = function () {
+			modal.style.display = "none";
+		}
 
-				// When the user clicks on <span> (x), close the modal
-				span.onclick = function() {
+		// When the user clicks anywhere outside of the modal, close it
+		window.onclick = function (event) {
+			if (event.target == modal) {
 				modal.style.display = "none";
-				}
+			}
+		}
+	</script>
 
-				// When the user clicks anywhere outside of the modal, close it
-				window.onclick = function(event) {
-				if (event.target == modal) {
-					modal.style.display = "none";
-				}
-				}
-			</script>
-			
 
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
-<UL id="lt" class="mc1">
-									<a href="Domestic Box Office Collection/dom_circuit.html"><li class="mc1">Mumbai/Gujrat</li></a>
-									<a href="Domestic Box Office Collection/dom_circuit.html"><li class="mc1">Delhi/UP</li></a>
-									<a href="Domestic Box Office Collection/dom_circuit.html"><li class="mc1">East Punjab</li></a>
-									<a href="Domestic Box Office Collection/dom_circuit.html"><li class="mc1">Rajasthan</li></a>
-									<a href="Domestic Box Office Collection/dom_circuit.html"><li class="mc1">Central India</li></a>
-									<a href="Domestic Box Office Collection/dom_circuit.html"><li class="mc1">Nizam/Andhra</li></a>
-									<a href="Domestic Box Office Collection/dom_circuit.html"><li class="mc1">Tamilnadu/Kerela</li></a>
-									<a href="Domestic Box Office Collection/dom_circuit.html"><li class="mc1">Mysore</li></a>
-									<a href="Domestic Box Office Collection/dom_circuit.html"><li class="mc1">West Bengal</li></a>
-									<a href="Domestic Box Office Collection/dom_circuit.html"><li class="mc1">Rajasthan</li></a>
-									<a href="Domestic Box Office Collection/dom_circuit.html"><li class="mc1">Assam</li></a>
-									<a href="Domestic Box Office Collection/dom_circuit.html"><li class="mc1">Orrisa</li></a>
-								</UL	>
