--- a/Domestic Box Office Collection/dom_lifetime_nett.html
+++ b/Domestic Box Office Collection/dom_lifetime_nett.html
@@ -35,7 +35,7 @@
                         <a href="../domestic.html"><h2>Domestic Box Office Collection:</h2></a><hr>
 						<h3>Highest Lifetime Nett Collection:</h3>
 						<div class="row">							
-							<div class="col select">
+							<div class="col slt ss2">
 								<select name="year" class="addselect" id="year">
 										<option value="2k21" class="l1"> Year</option>
 										<option value="2k21" class="l1"> 2021</option>
@@ -53,75 +53,109 @@
 								</select><br>
                     		</div>
 						</div>
-						<table>
+						<table class="tab12">
 							<tr>
-								<th width="5%" align="center" valign="middle" class="ww">Rank</th>
-                                <th width="15%" align="center" valign="middle" class="ww ">Poster</th>
-								<th width="25%" align="center" valign="middle" class="ww">Movie Name</th>
-								<th width="15%" align="center" valign="middle" class="ww">Release Date</th>
-								<th width="15%" align="center" valign="middle" class="ww">Lifetime Nett</th>
-								<th width="20%" align="center" valign="middle" class="ww">Verdict</th>
+								<th valign="middle" class="ww"><a href="#">Rank</a></th>
+								<th valign="middle" class="ww "><a href="#">Poster</a></th>
+								<th valign="middle" class="ww"><a href="#">Movie Name</a></th>
+								<th valign="middle" class="ww"><a href="../calender.html">Release Date</a></th>
+								<th valign="middle" class="ww"><a href="dom_lifetime_nett.html">Lifetime Nett</a></th>
+								<th valign="middle" class="ww"><a href="../verdict.html">Verdict</a></th>
 							</tr>
 							<tr>
 								<td>1.</td>
 								<td><a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img src="../images/bahubali2.jpg" width='50' height='70'/></noscript><img class=" lazyloaded" src="../images/bahubali2.jpg" data-src="../images/bahubali2.jpg" width="50" height="70"></a></td>
                                 <td><a href="../detail.html">Bahubali 2 [Hindi]</a></td>
-								<td>2nd Oct , 19</td>
-                                <td><span>&#8377;</span>510.36 Cr.</td>
-								<td>All Time BlockBuster</td>
+								<td>2 Oct 2019</td>
+                                <td><span>&#8377;</span>&nbsp;510.36 Cr</td>
+								<td>All Time Blockbuster</td>
 								</tr>
 							<tr>
 								<td>2.</td>
                                 <td><a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em; "><noscript><img src="../images/dangal.jpg" width='50' height='70' /></noscript><img class=" lazyloaded" src="../images/dangal.jpg" data-src="../images/dangal.jpg" width="50" height="70"></a></td>
 								<td><a href="../detail.html">Dangal</a></td>
-								<td>23rd Dec , 16</td>
-								<td><span>&#8377;</span>387.29 Cr.</td>
-                                <td>All Time BlockBuster </td>
+								<td>23 Dec 2016</td>
+								<td><span>&#8377;</span>&nbsp;387.29 Cr</td>
+                                <td>All Time Blockbuster </td>
                             </tr>
 							<tr>
 								<td>3.</td>
 								<td><a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img src="../images/tiger.jpg" width='50' height='70' /></noscript><img class=" lazyloaded" src="../images/tiger.jpg" data-src="../images/tiger.jpg" width="50" height="70"></a></td>
 								<td><a href="../detail.html">Tiger Zinda Hai</a></td>
-								<td>22nd Dec , 17</td>
-								<td><span>&#8377;</span>339.0 Cr.</td>
-                                <td>BlockBuster</td>
+								<td>22 Dec 2017</td>
+								<td><span>&#8377;</span>&nbsp;339.0 Cr</td>
+                                <td>Blockbuster</td>
                             </tr>
-							<tr>
-								<td>4.</td>
-								<td>The Power</td>
-								<td>14th January</td>
-							</tr>
-							<tr>
-								<td>5.</td>
-								<td>Tribhanga</td>
-								<td>15th January</td>
-							</tr>
-							<tr>
-								<td>5.</td>
-								<td>Madam Chief Minister</td>
-								<td>22nd January</td>
-							</tr>
-							<tr>
-								<td>6.</td>
-								<td>Aadhar</td>
-								<td>15th February</td>
-							</tr>
-							<tr>
-								<td>7.</td>
-								<td>XYZ</td>
-								<td>30th February</td>
-							</tr>
-							<tr>
-								<td>8.</td>
-								<td>ABC</td>
-								<td>13th March</td>
-							</tr>
-							<tr>
-								<td>9.</td>
-								<td>Aadhar</td>
-								<td>15th February</td>
-							</tr>
 						</table>
+						<div class="wrp">
+							<div class="row">
+								<div class="col">
+									<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+												src="images/ramp.jpg" width='70' height='90' /></noscript><img
+											class="lazyloaded" src="../images/bahubali2.jpg" data-src="images/ramp.jpg" width="70"
+											height="90"></a>
+								</div>
+								<div class="col">
+									<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="../detail.html"><b
+												class="sx">Bahubali 2 [Hindi]</b></a><br>
+										<a href="../calender.html"><b>Release Date:</a></b>&nbsp;&nbsp;28 Apr 2017<br>
+										<a href="dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr<br>
+										<a href="../verdict.html"><b>Verdict:</b></a>&nbsp;&nbsp;All Time Blockbuster
+									</p>
+								</div>
+							</div>
+							<hr>
+							<div class="row">
+								<div class="col">
+									<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+												src="images/ramp.jpg" width='70' height='90' /></noscript><img
+											class="lazyloaded" src="../images/dangal.jpg" data-src="images/ramp.jpg" width="70"
+											height="90"></a>
+								</div>
+								<div class="col">
+									<p class="sz"><b class="sx">2.</b>&nbsp;&nbsp;<a href="../detail.html"><b class="sx">Dangal</b></a><br>
+										<a href="../calender.html"><b>Release Date:</a></b>&nbsp;&nbsp;23 Dec 2016<br>
+										<a href="dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr<br>
+										<a href="../verdict.html"><b>Verdict:</b></a>&nbsp;&nbsp;All Time Blockbuster
+									</p>
+								</div>
+							</div>
+							<hr>
+							<div class="row">
+								<div class="col">
+									<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+												src="images/ramp.jpg" width='70' height='90' /></noscript><img
+											class="lazyloaded" src="../images/tiger.jpg" data-src="images/ramp.jpg" width="70"
+											height="90"></a>
+								</div>
+								<div class="col">
+									<p class="sz"><b class="sx">3.</b>&nbsp;&nbsp;<a href="../detail.html"><b
+												class="sx">Tiger Zinda Hai</b></a><br>
+										<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;22 Dec 2017<br>
+										<a href="dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr<br>
+										<a href="../verdict.html"><b>Verdict:</b></a>&nbsp;&nbsp;All Time Blockbuster
+									</p>
+								</div>
+							</div>
+							<hr>
+							<div class="row">
+								<div class="col">
+									<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+												src="images/ramp.jpg" width='70' height='90' /></noscript><img
+											class="lazyloaded" src="../images/simmba.jpg" data-src="images/ramp.jpg" width="70"
+											height="90"></a>
+								</div>
+								<div class="col">
+									<p class="sz"><b class="sx">4.</b>&nbsp;&nbsp;<a href="../detail.html"><b
+												class="sx">War</b></a><br>
+										<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
+										<a href="dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr<br>
+										<a href="../verdict.html"><b>Verdict:</b></a>&nbsp;&nbsp;All Time Blockbuster
+									</p>
+								</div>
+							</div>
+							<hr>
+						</div>
 					</div>
 
                 </section>
@@ -158,12 +192,11 @@
 				</div>
 				<div class="copyright">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
+						<li><a href="http://twitter.com/VivekChoubeyyy" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.facebook.com/iVivekChoubey" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="http://instagram.com/vivekchoubeyy" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 					</ul>
-					&copy; Selfmade Design: <a href="#">On demand </a>. Images: <a href="https://unsplash.com">Coverr</a>. Video: <a href="https://coverr.co">Coverr</a>.
+					&copy; Design By: <a href="#">Tech_Marketz</a>   
 				</div>
 			</footer>
 
