--- a/Domestic Box Office Collection/dom_circuit.html
+++ b/Domestic Box Office Collection/dom_circuit.html
@@ -38,11 +38,11 @@
 					<h2>Domestic Box Office Collection:</h2>
 				</a>
 				<hr>
-				<h3>Highest Circuit-Wise Nett Collection:</h3>
-				<hr>
+				<h3 class="gyb">Highest Circuit-Wise Nett Collection:</h3>
+				<hr class="gyb">
 				<h3>Highest Mumbai/Gujrat Nett Collection:</h3>
 				<div class="row">
-					<div class="col select ss2">
+					<div class="col slt1 ss2">
 						<select name="year" class="addselect" id="year">
 							<option value="2k21" class="l1"> Year</option>
 							<option value="2k21" class="l1"> 2021</option>
@@ -62,12 +62,12 @@
 				</div>
 				<table class="tab12">
 					<tr>
-						<th width="5%"  valign="middle" class="ww">Rank</th>
-						<th width="15%"  valign="middle" class="ww ">Poster</th>
-						<th width="25%"  valign="middle" class="ww">Movie Name</th>
-						<th width="15%"  valign="middle" class="ww">Release Date</th>
-						<th width="15%"  valign="middle" class="ww">Mumbai/Gujrat</th>
-						<th width="20%"  valign="middle" class="ww">Lifetime Nett</th>
+						<th valign="middle" class="ww"><a href="#">Rank</a></th>
+						<th valign="middle" class="ww "><a href="#">Poster</a></th>
+						<th valign="middle" class="ww"><a href="#">Movie Name</a></th>
+						<th valign="middle" class="ww"><a href="../calender.html">Release Date</a></th>
+						<th valign="middle" class="ww"><a href="dom_circuit.html">Mumbai/Gujrat</a></th>
+						<th valign="middle" class="ww"><a href="dom_lifetime_nett.html">Lifetime Nett</a></th>
 					</tr>
 					<tr>
 						<td>1.</td>
@@ -77,9 +77,9 @@
 									class=" lazyloaded" src="../images/bahubali2.jpg" data-src="../images/bahubali2.jpg"
 									width="50" height="70"></a></td>
 						<td><a href="../detail.html">Bahubali 2 [Hindi]</a></td>
-						<td>2nd Oct , 19</td>
-						<td><span>&#8377;</span>185.76 Cr.</td>
-						<td><span>&#8377;</span>510.36 Cr.</td>
+						<td>2 Oct 2019</td>
+						<td><span>&#8377;</span>&nbsp;185.76 Cr</td>
+						<td><span>&#8377;</span>&nbsp;510.36 Cr</td>
 					</tr>
 					<tr>
 						<td>2.</td>
@@ -89,9 +89,9 @@
 									class=" lazyloaded" src="../images/tanhaji.jpg" data-src="../images/tanhaji.jpg"
 									width="50" height="70"></a></td>
 						<td><a href="../detail.html">Tanhaji</a></td>
-						<td>10th Jan , 20</td>
-						<td><span>&#8377;</span>143.85 Cr.</td>
-						<td><span>&#8377;</span>269.77 Cr.</td>
+						<td>10 Jan 2020</td>
+						<td><span>&#8377;</span>&nbsp;143.85 Cr</td>
+						<td><span>&#8377;</span>&nbsp;269.77 Cr</td>
 					</tr>
 					<tr>
 						<td>3.</td>
@@ -101,72 +101,72 @@
 									class=" lazyloaded" src="../images/dangal.jpg" data-src="../images/dangal.jpg"
 									width="50" height="70"></a></td>
 						<td><a href="../detail.html">Dangal</a></td>
-						<td>23rd Dec , 16</td>
-						<td><span>&#8377;</span>104.26 Cr.</td>
-						<td><span>&#8377;</span>387.29 Cr.</td>
+						<td>23 Dec 2016</td>
+						<td><span>&#8377;</span>&nbsp;104.26 Cr</td>
+						<td><span>&#8377;</span>&nbsp;387.29 Cr</td>
 					</tr>
 				</table>
 				<div class="wrp">
 					<div class="row">
 						<div class="col">
-							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="images/ramp.jpg" width='70' height='90' /></noscript><img
 									class="lazyloaded" src="../images/bahubali2.jpg" data-src="images/ramp.jpg" width="70"
 									height="90"></a>
 						</div>
 						<div class="col">
-							<p class="sz"><b>1.</b>&nbsp;&nbsp;<a href="detail.html"><b>Bahubali 2 [Hindi]</b></a><br>
-								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;2 Oct 2019<br></a>
-								<b>Mumbai/Gujrat:</b>&nbsp;&nbsp; <span>&#8377;</span>185.76 Cr.<br>
-								<b>Nett Gross:</b>&nbsp;&nbsp; <span>&#8377;</span>185.76 Cr.
+							<p class="sz"><b>1.</b>&nbsp;&nbsp;<a href="../detail.html"><b>Bahubali 2 [Hindi]</b></a><br>
+								<b>Release Date:</b><a href="../calender.html">&nbsp;&nbsp;2 Oct 2019<br></a>
+								<b>Mumbai/Gujrat:</b>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
+								<b>Nett Gross:</b>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr
 							</p>
 						</div>
-					</div><br>
+					</div><hr>
 					<div class="row">
 						<div class="col">
-							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="images/ramp.jpg" width='70' height='90' /></noscript><img
 									class="lazyloaded" src="../images/tanhaji.jpg" data-src="images/ramp.jpg" width="70"
 									height="90"></a>
 						</div>
 						<div class="col">
-							<p class="sz"><b>2.</b>&nbsp;&nbsp;<a href="detail.html"><b>Tanhaji</b></a><br>
-								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;10 Jan 2020<br></a>
-								<b>Mumbai/Gujrat:</b>&nbsp;&nbsp; <span>&#8377;</span>185.76 Cr.<br>
-								<b>Nett Gross:</b>&nbsp;&nbsp; <span>&#8377;</span>185.76 Cr.
+							<p class="sz"><b>2.</b>&nbsp;&nbsp;<a href="../detail.html"><b>Tanhaji</b></a><br>
+								<b>Release Date:</b><a href="../calender.html">&nbsp;&nbsp;10 Jan 2020<br></a>
+								<b>Mumbai/Gujrat:</b>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
+								<b>Nett Gross:</b>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr
 							</p>
 						</div>
-					</div><br>
+					</div><hr>
 					<div class="row">
 						<div class="col">
-							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="../images/bahubali2.jpg" width='70' height='90' /></noscript><img
 									class="lazyloaded" src="../images/dangal.jpg" data-src="images/ramp.jpg" width="70"
 									height="90"></a>
 						</div>
 						<div class="col">
-							<p class="sz"><b>3.</b>&nbsp;&nbsp;<a href="detail.html"><b>Dangal</b></a><br>
-								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;23 Dec 2016<br></a>
-								<b>Mumbai/Gujrat:</b>&nbsp;&nbsp; <span>&#8377;</span>185.76 Cr.<br>
-								<b>Nett Gross:</b>&nbsp;&nbsp; <span>&#8377;</span>185.76 Cr.
+							<p class="sz"><b>3.</b>&nbsp;&nbsp;<a href="../detail.html"><b>Dangal</b></a><br>
+								<b>Release Date:</b><a href="../calender.html">&nbsp;&nbsp;23 Dec 2016<br></a>
+								<b>Mumbai/Gujrat:</b>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
+								<b>Nett Gross:</b>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr
 							</p>
 						</div>
-					</div><br>
+					</div><hr>
 					<div class="row">
 						<div class="col">
-							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="images/ramp.jpg" width='70' height='90' /></noscript><img
 									class="lazyloaded" src="../images/bahubali2.jpg" data-src="images/ramp.jpg" width="70"
 									height="90"></a>
 						</div>
 						<div class="col">
-							<p class="sz"><b>4.</b>&nbsp;&nbsp;<a href="detail.html"><b>Bahubali 2 [Hindi]</b></a><br>
-								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;2 Oct 2019<br></a>
-								<b>Mumbai/Gujrat:</b>&nbsp;&nbsp; <span>&#8377;</span>185.76 Cr.<br>
-								<b>Nett Gross:</b>&nbsp;&nbsp; <span>&#8377;</span>185.76 Cr.
+							<p class="sz"><b>4.</b>&nbsp;&nbsp;<a href="../detail.html"><b>Bahubali 2 [Hindi]</b></a><br>
+								<b>Release Date:</b><a href="../calender.html">&nbsp;&nbsp;2 Oct 2019<br></a>
+								<b>Mumbai/Gujrat:</b>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
+								<b>Nett Gross:</b>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr
 							</p>
 						</div>
-					</div><br>
+					</div><hr>
 				</div>
 			</div>
 		</section>
@@ -203,13 +203,11 @@
 			</div>
 			<div class="copyright">
 				<ul class="icons">
-					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
+					<li><a href="http://twitter.com/VivekChoubeyyy" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.facebook.com/iVivekChoubey" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="http://instagram.com/vivekchoubeyy" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
-				&copy; Selfmade Design: <a href="#">On demand </a>. Images: <a href="https://unsplash.com">Coverr</a>.
-				Video: <a href="https://coverr.co">Coverr</a>.
+				&copy; Design By: <a href="#">Tech_Marketz</a>   
 			</div>
 		</footer>
 
