--- a/index.html
+++ b/index.html
@@ -182,10 +182,7 @@
 								</a></li>
 						</ul>
 					</div>
-					<div class="col">
-						&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-					</div>
-					<div class="col car">
+					<div class="col car" >
 						<h2>Box Office Reports & Articles:</h2><hr>
 						<div class="slideshow-container">
 							<!-- Full-width images with number and caption text -->
@@ -334,6 +331,7 @@
 			<ul class="icons">
 				<li><a href="http://twitter.com/VivekChoubeyyy" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 				<li><a href="https://www.facebook.com/iVivekChoubey" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+				<li><a href="#" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
 				<li><a href="http://instagram.com/vivekchoubeyy" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 			</ul>
 			&copy; Design By: <a href="#">Tech_Marketz</a>   
