--- a/calender.html
+++ b/calender.html
@@ -57,9 +57,9 @@
 				</div>
 				<table class="tab12">
 					<tr>
-						<th class="ww"><a href="#">S.No.</a></th>
-						<th class="ww "><a href="#">Poster</a></th>
-						<th class="ww"><a href="#">Movie Name</a></th>
+						<th class="ww"><a href="">S.No.</a></th>
+						<th class="ww "><a href="">Poster</a></th>
+						<th class="ww"><a href="">Movie Name</a></th>
 						<th class="ww"><a href="calender.html">Release Date</a></th>
 						<th class="ww"><a href="Domestic Box Office Collection/dom_lifetime_nett.html">Domestic Lifetime Nett</a></th>
 						<th class="ww"><a href="verdict.html">Verdict</a></th>
