--- a/domestic.html
+++ b/domestic.html
@@ -71,29 +71,30 @@
 						<div class="modal-content">
 							<span class="close1">&times;</span>
 							<h3>Highest Week-Wise Nett Collections:</h3>
-							<hr class="h">
+							<hr>
 							<div class="row sx">
 								<div class="col">
 									&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 								</div>
 								<div class="col-6">
-									<p class="sz"><a href="Domestic Box Office Collection/dom_week.html">•Opening
+									<h4 class=""><a href="Domestic Box Office Collection/dom_week.html">•Opening
 											Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•Second
 											Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•Third
 											Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•Fourth
 											Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•Fifth
-											Week</a>
-									<p>
+											Week</a><br><a href="Domestic Box Office Collection/dom_week.html" class="gyb">•Sixth
+												Week</a><br><a href="Domestic Box Office Collection/dom_week.html" class="gyb">•Seventh
+												Week</a><br><a href="Domestic Box Office Collection/dom_week.html" class="gyb">•Eighth
+												Week</a><br><a href="Domestic Box Office Collection/dom_week.html" class="gyb">•There
+												After</a>
+									</h4>
 								</div>
-								<div class="col">
-									&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-								</div>
-								<div class="col-6">
-									<p class="sz"><a href="Domestic Box Office Collection/dom_week.html">•Sixth
+								<div class="col-6" style="margin-left: 190px;">
+									<h4 class="sd"><a href="Domestic Box Office Collection/dom_week.html">•Sixth
 											Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•Seventh
 											Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•Eighth
 											Week</a><br><a href="Domestic Box Office Collection/dom_week.html">•There
-											After</a></p>
+											After</a></h4>
 								</div>
 							</div>
 						</div><br><br>
@@ -106,35 +107,41 @@
 						<div class="modal-content">
 							<span class="close">&times;</span>
 							<h3>Highest Circuit-Wise Nett Collections:</h3>
-							<hr class="h">
-							<div class="row sx">
+							<hr>
+							<div class="row">
 								<div class="col">
 									&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 								</div>
 								<div class="col-6">
-									<p class="sz"><a
-											href="Domestic Box Office Collection/dom_circuit.html">•Mumbai/Gujrat</a><br><a
-											href="Domestic Box Office Collection/dom_circuit.html">•Delhi/UP
+									<h4><a
+											href="Domestic Box Office Collection/dom_circuit.html">•Mumbai - Gujarat</a><br><a
+											href="Domestic Box Office Collection/dom_circuit.html">•Delhi - UP
 										</a><br><a href="Domestic Box Office Collection/dom_circuit.html">•East
 										Punjab</a><br><a
 											href="Domestic Box Office Collection/dom_circuit.html">•Rajasthan</a><br><a
-											href="Domestic Box Office Collection/dom_circuit.html">•CP Bers</a><br><a
+											href="Domestic Box Office Collection/dom_circuit.html">•CP Berar</a><br><a
 											href="Domestic Box Office Collection/dom_circuit.html">•Central
 											India</a><br><a
-											href="Domestic Box Office Collection/dom_circuit.html">•Nizam/Andhra</a></p>
-								</div>
-								<div class="col">
-									&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-								</div>
-								<div class="col-6">
-									<p class="sz"><a
-											href="Domestic Box Office Collection/dom_circuit.html">•Mysore</a> <br><a
-											href="Domestic Box Office Collection/dom_circuit.html">•Tamilnadu/Kerela</a> <br><a
-											href="Domestic Box Office Collection/dom_circuit.html">•Bihar
+											href="Domestic Box Office Collection/dom_circuit.html">•West Bengal</a><br>
+											<a
+											href="Domestic Box Office Collection/dom_circuit.html" class="gyb">•Bihar</a> <br><a
+											href="Domestic Box Office Collection/dom_circuit.html" class="gyb">•Nizam - Andhra</a> <br><a
+											href="Domestic Box Office Collection/dom_circuit.html" class="gyb">•Mysore
 										</a><br><a
-											href="Domestic Box Office Collection/dom_circuit.html">•West Bengal</a><br><a
+											href="Domestic Box Office Collection/dom_circuit.html" class="gyb">•Odisha</a><br><a
+											href="Domestic Box Office Collection/dom_circuit.html" class="gyb">•Assam</a><br><a
+											href="Domestic Box Office Collection/dom_circuit.html" class="gyb">•Tamil N - Kerala</a>
+									</h4>
+								</div>
+								<div class="col-6" style="margin-left: 190px;">
+									<h4 class="sd"><a
+											href="Domestic Box Office Collection/dom_circuit.html">•Bihar</a> <br><a
+											href="Domestic Box Office Collection/dom_circuit.html">•Nizam - Andhra</a> <br><a
+											href="Domestic Box Office Collection/dom_circuit.html">•Mysore
+										</a><br><a
+											href="Domestic Box Office Collection/dom_circuit.html">•Odisha</a><br><a
 											href="Domestic Box Office Collection/dom_circuit.html">•Assam</a><br><a
-											href="Domestic Box Office Collection/dom_circuit.html">•Orrisa</a></p>
+											href="Domestic Box Office Collection/dom_circuit.html">•Tamil N - Kerala</a></h4>
 								</div>
 							</div>
 						</div><br><br>
@@ -178,6 +185,7 @@
 			<ul class="icons">
 				<li><a href="http://twitter.com/VivekChoubeyyy" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 				<li><a href="https://www.facebook.com/iVivekChoubey" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+				<li><a href="#" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
 				<li><a href="http://instagram.com/vivekchoubeyy" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 			</ul>
 			&copy; Design By: <a href="#">Tech_Marketz</a>   
